2004/02/04 20:19 (+0100) kaffeetisch

	* gperl.h, Glib.xs: Add the new helper "object" GPerlArgv that
	encapsulates everything related to argv parsing and thus
	simplifies the various init xsubs.

2004/02/04 02:33 (-0500) muppetman

	* GBoxed.xs, GObject.xs, GType.xs: GType is not a guint, it's a
	gulong; therefore, GUINT_TO_POINTER/GPOINTER_TO_UINT are not valid
	for GTypes.  use direct casts, instead.  this fixes nasty problems
	on alpha.  thanks to Mark Brockschmidt for finding the bug and
	loaning me machine time to solve it.

2004/02/04 01:21 (-0500) muppetman

	* GType.xs: call method _INSTALL_OVERRIDES on newly registered
	Glib::Object subclasses, to allow the new types an opportunity to
	install vfunc overrides.  This method will typically be provided
	by the class which introduces the vfuncs, and will install
	implementations which marshal to inheritable perl methods.
	Do nothing if no such method can be found; not all classes have
	pure vfuncs.

2004/02/03 00:57 (-0500) muppetman

	* GType.xs: remove debugging print

	* GenPod.pm: add 'unsigned' to list of built-in mappings

	* t/9.t, t/a.t: add mipsel, mips, and alpha to the list of 64-bit
	platforms on which to skip tests which exercise glib bugs.

2004/01/30 22:36 (-0500) muppetman

	* Subclass.pm: pass all unknown import parameters through to
	Glib::Type->register_object.  bump version.

2004/01/29 20:03 (-0500) rwmcfa1

	* Glib.pm, README: unstable release 1.033

	* NEWS: updated

	1.032 isn't going public, was a test failure with no DISPLAY in Gtk2

2004/01/29 18:44 (-0500) rwmcfa1

	* Glib.pm, README: unstable release 1.032

	* NEWS: updated

2004/01/27 11:44 (-0500) rwmcfa1

	* ParseXSDoc.pm, GenPod.pm: added a new =for type, see_also which
	allows for appending things to see onto the end of the apidoc 
	autogenerated SEE ALSO sections, much desired/asked for feature. code
	added to ParseXSDoc to find them and GenPod to use them.

2004/01/27 10:44 (-0500) rwmcfa1
