@@ -1,3 +1,7 @@
+2004/02/04 19:09 (-0500) rwmcfa1
+
+	* Glib.xs: implemented linked version checking in BOOT section
+
 2004/02/04 20:19 (+0100) kaffeetisch
 
 	* gperl.h, Glib.xs: Add the new helper "object" GPerlArgv that
